[NOID] changes after cherry-picks